# my-project

./: CLAUDE.md  app.py  pyproject.toml  requirements.txt  stock.py
my_project/: main.py
tests/: test_main.py
